environnement/dev/app/configs/istio/gateway/request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress  # S'applique au istio-ingress gateway
  jwtRules:
  - issuer: "core-user-service"
    # Option 1: JWKS URI (recommandé - clés dynamiques)
    jwksUri: "http://core-user-service.visiobook-namespace.svc.cluster.local:80/api/v1/auth/.well-known/jwks.json"
    
    forwardOriginalToken: true
    outputPayloadToHeader: "x-jwt-payload"
