environnement/dev/app/configs/istio/gateway/main-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: visiobook-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress  # Correspond au label de votre istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    # Pour forcer HTTPS, décommentez :
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: visiobook-tls-secret  # Secret TLS provenant de cert-manager
