environnement/dev/app/configs/istio/gateway/virtualservice-ai-analysis.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ai-analyzis-routes
  namespace: visiobook-namespace
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/visiobook-gateway
  http:
  - match:
    - uri:
        prefix: "/api/v1/analyze"
    - uri:
        prefix: "/api/v1/jobs"
    headers:
      request:
        remove:
        - x-user-id
    route:
    - destination:
        host: ai-analysis-service
        port:
          number: 80
