environnement/dev/app/configs/istio/gateway/virtualservice-bullmq-dashboard.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bullmq-dashboard-routes
  namespace: visiobook-namespace
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/visiobook-gateway
  http:
  - match:
    - uri:
        prefix: "/bull"

    route:
    - destination:
        host: bullmq-dashboard
        port:
          number: 80
