environnement/dev/app/configs/istio/gateway/virtualservice-ingestion-core-project.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingestion-routes
  namespace: visiobook-namespace
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/visiobook-gateway
  http:
  - headers:
      request:
        remove:
        - x-user-id
  - match:
    - uri:
        prefix: "/api/v1/projects"
    - uri:
        prefix: "/api/v1/shared"
    - uri:
        prefix: "/api/v1/projects"
    - uri:
        prefix: "/api/v1/content"
    - uri:
        prefix: "/api/v1/versions"
    - uri:
        prefix: "/api/v1/workdlow"

    route:
    - destination:
        host: core-project-service
        port:
          number: 3000
