environnement/dev/app/configs/istio/gateway/virtualservice-ingestion.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingestion-routes
  namespace: visiobook-namespace
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/visiobook-gateway
  http:
  - headers:
      request:
        remove:
        - x-user-id
  - match:
    - uri:
        prefix: "/api/v1/extract"
    - uri:
        prefix: "/api/v1/preprocess"
    - uri:
        prefix: "/api/v1/ingest"
    - uri:
        prefix: "/api/v1/validate"
    - uri:
        prefix: "/api/v1/upload"
    - uri:
        prefix: "/api/v1/folders"
    route:
    - destination:
        host: content-ingestion-service
        port:
          number: 3000
