environnement/dev/app/configs/istio/gateway/virtualservice-payement.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payement-routes
  namespace: visiobook-namespace
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/visiobook-gateway
  http:
  - match:
    - uri:
        prefix: "/api/v1/subscriptions"
    - uri:
        prefix: "/api/v1/quotas"
    - uri:
        prefix: "/api/v1/webhooks"

    route:
    - destination:
        host: core-payment-service
        port:
          number: 3030
