environnement/dev/app/configs/istio/gateway/virtualservice-users.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: users-routes
  namespace: visiobook-namespace
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/visiobook-gateway
  http:
  - match:
    - uri:
        prefix: "/api/v1/users"
    headers:
      request:
        remove:
        - x-user-id
    route:
    - destination:
        host: core-user-service
        port:
          number: 80
