environnement/dev/app/configs/istio/gateway/authorization-policy-ai-analysis.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingestion-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/analyze*"]
        methods: ["POST"]

  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/jobs*"]
        methods: ["GET"]
