environnement/dev/app/configs/istio/gateway/authorization-policy-core-project.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: core-project-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/projects*"]
        methods: ["GET", "POST","PUT", "DELETE"]

  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/shared*"]
        methods: ["GET", "POST","PUT", "DELETE"]
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/projects*"]
        methods: ["GET", "POST","PUT", "DELETE"]
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/content*"]
        methods: ["GET", "POST","PUT", "DELETE"]

  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/versions*"]
        methods: ["GET", "POST","PUT", "DELETE"]

  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/workflow*"]
        methods: ["GET", "POST","PUT", "DELETE"]
