environnement/dev/app/configs/istio/gateway/authorization-policy-ingestion.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingestion-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/ingest*"]
        methods: ["GET", "POST"]

  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/preprocess*"]
        methods: ["GET", "POST"]

  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/extract*"]
        methods: ["GET", "POST"]
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/upload*"]
        methods: ["GET", "POST"]
