environnement/dev/app/configs/istio/gateway/authorization-policy-payement.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: payement-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/subscriptions*"]
        methods: ["GET", "POST"]

  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/quotas*"]
        methods: ["GET", "POST"]

  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/api/v1/webhooks*"]
        methods: ["GET", "POST"]
